recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:17: error: ';' expected but 'else' found.
  else {avance(length)}
  ^PentaKoch:22: error: expected start of definition
	override def run() {
                 ^PentaKoch:25: error: Unmatched closing brace '}' ignored here
}
^