recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.code

def pentaKoch(levels:Int, length:Double) {
  
  pentaKoch(levels-1, length*0.4)
  left(90+36)
  pentaKoch(levels-1, length*0.4)
  right(36)  
  pentaKoch(levels-1, length*0.4)
  right(36)
  pentaKoch(levels-1, length*0.4)
  left(36)
  pentaKoch(levels-1, length*0.4)
  left(90+36)

  
  }
  else {avance(length)}
  
}